--- a/flask_blog_template/app/templates/login.html
+++ b/flask_blog_template/app/templates/login.html
@@ -2,6 +2,15 @@
 
 {% block content %}
 <h1>Login</h1>
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <ul class=flashes>
+        {% for category, message in messages %}
+            <li class="{{ category }}">{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
 <form action="{{ url_for('main.login') }}" method="post">
     {{ form.hidden_tag() }}
     {{ form.username.label }}<br>
