--- a/flask_blog_template/app/static/styles.css
+++ b/flask_blog_template/app/static/styles.css
@@ -1,3 +1,30 @@
 li.error {
     color: red;
 }
+
+:root {
+    --primary-color: #003C71;
+    --secondary-color: #FF6F00;
+    --background-color: #F9F9F9;
+    --text-color: #000000;
+  }
+  
+  body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+  }
+  
+  .navbar, .footer {
+    background-color: var(--primary-color);
+    color: white;
+  }
+  
+  a {
+    color: var(--secondary-color);
+  }
+  
+  .card {
+    width: 18rem;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.20);
+}
