hidden variables and css

--- a/flask_blog_template/app/templates/home.html
+++ b/flask_blog_template/app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="container">
+  <div class="container home-container">
     <div class="row">
       {% for post in posts %}
         <div class="col-lg-4 col-md-6 col-sm-12">
