--- a/flask_blog_template/app/static/styles.css
+++ b/flask_blog_template/app/static/styles.css
@@ -24,7 +24,26 @@ li.error {
   }
   
   .card {
-    width: 18rem;
+    width: auto;
     border: 1px solid #ccc;
     box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.20);
 }
+
+.home-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.form-login {
+  padding-top: 30px;
+  padding-bottom: 60px; 
+}
+
+.post-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+
+
+
