--- a/flask_blog_template/app/templates/login.html
+++ b/flask_blog_template/app/templates/login.html
@@ -11,7 +11,7 @@
         </ul>
     {% endif %}
 {% endwith %}
-<form action="{{ url_for('main.login') }}" method="post">
+<form action="{{ url_for('main.login') }}" method="post" class=" form-login">
     {{ form.hidden_tag() }}
     {{ form.username.label }}<br>
     {{ form.username(size=32) }}<br>
