--- a/flask_blog_template/app/templates/post.html
+++ b/flask_blog_template/app/templates/post.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container">
+    <div class="container post-container">
         <div class="post-detail">
             <!-- Display the post title -->
             <h1>{{ post.title }}</h1>
             <!-- Display the hero image -->
             {% if post.images %}
-            <img src="{{ url_for('static', filename='output/' + post.images[0].image_url) }}" alt="Hero image for {{ post.title }}">
+            <img class= "img-fluid" src="{{ url_for('static', filename='output/' + post.images[0].image_url) }}" alt="Hero image for {{ post.title }}">
             {% else %}
             <!-- Display a default image if no images are present -->
             <img src="{{ url_for('static', filename='default.png') }}" alt="Hero image for {{ post.title }}">
@@ -25,7 +25,7 @@
             
             <!-- Display the other images -->
             {% if post.images|length > 1 %}
-            <img src="{{ url_for('static', filename= 'output/' + post.images[1].image_url) }}" alt="Image for {{ post.title }}">
+            <img class= "img-fluid" src="{{ url_for('static', filename= 'output/' + post.images[1].image_url) }}" alt="Image for {{ post.title }}">
             {% endif %}
             
         </div>
