--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     
 
-    <title>{{ title }} - My Blog</title>
+    <title>{% block title %}{{ title|default('Default Title') }}{% endblock %}</title>
   </head>
   <body>
     
